--- a/app/views/commandes/_selection_articles.html.erb
+++ b/app/views/commandes/_selection_articles.html.erb
@@ -20,7 +20,7 @@
 
                 <div class="collapse" id="collapseNewArticle<%= produit.id %>">
                     <div id="new" class="">
-                        <%= render partial: 'articles/form', locals: { commande_id: @commande.id, produit_id: produit.id, article: Article.new } %>
+                        <%#= render partial: 'articles/form', locals: { commande_id: @commande.id, produit_id: produit.id, article: Article.new } %>
                     </div>
                 </div>
 
