--- a/app/views/commandes/show.html.erb
+++ b/app/views/commandes/show.html.erb
@@ -7,14 +7,9 @@
 
 <%= render 'articles/articles' %>
 
-<!--div class="text-end m-2 mb-3">
-    <%= button_to "Nouvel article", selection_articles_commandes_path, class: "btn btn-warning fw-bold" %>
-</div>
-
-<div id="partial-selection" class="">
-</div-->
-
 <%= render 'paiement_recus/paiement_recus' %>
+
+<%= render 'avoir_rembs/avoir_rembs' %>
 
 
 
