--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -1,6 +1,6 @@
 <%= card_main_model("Articles", "shirt",
-  link_to("Nouvel article", "#collapseNewArticle", 
-  class: "btn btn-warning fw-bold", 
+  link_to("", "#collapseNewArticle", 
+  class: "fa fa-plus btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewArticle" })) %>
 
