--- a/app/views/paiement_recus/_paiement_recus.html.erb
+++ b/app/views/paiement_recus/_paiement_recus.html.erb
@@ -1,8 +1,8 @@
 <%= card_main_model(
   "Paiements", 
   "money", 
-  link_to("Nouveau paiement", "#collapseNewPaiement", 
-  class: "btn btn-warning fw-bold", 
+  link_to("", "#collapseNewPaiement", 
+  class: "fa fa-plus btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewPaiement" })) %>
 
