--- a/app/views/commandes/show.html.erb
+++ b/app/views/commandes/show.html.erb
@@ -1,5 +1,5 @@
 
-<%= card_main_model("Commande", "file") %>
+<%= card_main_model("Commande", "file", "") %>
 
 <%= render @commande %>
 
@@ -10,8 +10,6 @@
 <%= render 'paiement_recus/paiement_recus' %>
 
 <%= render 'avoir_rembs/avoir_rembs' %>
-
-
 
 
 
