--- a/app/views/avoir_rembs/_avoir_rembs.html.erb
+++ b/app/views/avoir_rembs/_avoir_rembs.html.erb
@@ -1,5 +1,8 @@
-<%= card_main_model("Avoir-Remb.", "money-bill-transfer",
-  link_to("", "#collapseNewAAvoirremb", 
+<%= card_main_model(
+  "Avoir-Remb.", 
+  "money-bill-transfer",
+  link_to("", 
+  "#collapseNewAAvoirremb", 
   class: "fa fa-plus btn btn-warning fw-bold", 
   data: { bs_toggle: "collapse" }, 
   role: "button", aria: { expanded: "false", controls: "collapseNewAAvoirremb" })) %>
