--- a/app/views/paiement_recus/_paiement_recus.html.erb
+++ b/app/views/paiement_recus/_paiement_recus.html.erb
@@ -7,7 +7,7 @@
   role: "button", aria: { expanded: "false", controls: "collapseNewPaiement" })) %>
 
 <div class="collapse" id="collapseNewPaiement">
-    <div id="new" class="mb-3">
+    <div id="new_paiement" class="mb-3">
         <%= render partial: 'paiement_recus/form', locals: { commande_id: @commande.id, paiement_recu: PaiementRecu.new } %>
     </div>
 </div>
@@ -18,4 +18,4 @@
   <% end %>
 </div>
 
-  
+<%= render 'paiement_recus/synthese' %>
