--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -15,79 +15,16 @@
         </div>
       <% end %>
 
-      <div>
-        <%= form.label :prenom, style: "display: block" %>
-        <%= form.text_field :prenom %>
-      </div>
 
-      <div>
-        <%= form.label :nom, style: "display: block" %>
-        <%= form.text_field :nom %>
-      </div>
+      <%= custom_form_elements(form, 
+        [:prenom, :text_field], [:nom, :text_field],
+        [:commentaires, :text_area], [:propart, :text_field],
+        [:intitule, :text_field], [:tel, :text_field], [:tel2, :number_field],
+        [:mail, :text_field], [:mail2, :date_field], [:adresse, :text_field],
+        [:cp, :text_field], [:ville, :text_field], [:pays, :text_field], [:contact, :text_field]
+      ) %>
 
-      <div>
-        <%= form.label :commentaires, style: "display: block" %>
-        <%= form.text_area :commentaires %>
-      </div>
-
-      <div>
-        <%= form.label :propart, style: "display: block" %>
-        <%= form.text_field :propart %>
-      </div>
-
-      <div>
-        <%= form.label :intitule, style: "display: block" %>
-        <%= form.text_field :intitule %>
-      </div>
-
-      <div>
-        <%= form.label :tel, style: "display: block" %>
-        <%= form.text_field :tel %>
-      </div>
-
-      <div>
-        <%= form.label :tel2, style: "display: block" %>
-        <%= form.text_field :tel2 %>
-      </div>
-
-      <div>
-        <%= form.label :mail, style: "display: block" %>
-        <%= form.text_field :mail %>
-      </div>
-
-      <div>
-        <%= form.label :mail2, style: "display: block" %>
-        <%= form.text_field :mail2 %>
-      </div>
-
-      <div>
-        <%= form.label :adresse, style: "display: block" %>
-        <%= form.text_field :adresse %>
-      </div>
-
-      <div>
-        <%= form.label :cp, style: "display: block" %>
-        <%= form.text_field :cp %>
-      </div>
-
-      <div>
-        <%= form.label :ville, style: "display: block" %>
-        <%= form.text_field :ville %>
-      </div>
-
-      <div>
-        <%= form.label :pays, style: "display: block" %>
-        <%= form.text_field :pays %>
-      </div>
-
-      <div>
-        <%= form.label :contact, style: "display: block" %>
-        <%= form.text_field :contact %>
-      </div>
-
-      <div>
-        <%= form.submit %>
-      </div>
+      <%= custom_submit_button(form) %>
 
     <% end %>
 
