--- a/app/views/commandes/_commande.html.erb
+++ b/app/views/commandes/_commande.html.erb
@@ -5,7 +5,8 @@
 
     <div class="row">
       <div class="col-10">
-          <strong>Commande :</strong> <%= commande.full_name %>
+          <strong><%= commande.ref_commande %> </strong>
+          <%= commande.full_name %>
       </div>
       <div class="col-2 text-end">
           <%= link_to "Show", "#collapseCommande", class: "btn btn-primary", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
