--- a/app/views/paiement_recus/_form.html.erb
+++ b/app/views/paiement_recus/_form.html.erb
@@ -23,7 +23,7 @@
     
     <%= custom_form_elements(form, 
       [:montant, :number_field],
-      [:moyen, :number_field], [:commentaires, :text_area] )
+      [:moyen, :text_field], [:commentaires, :text_area] )
     %>
 
     <%= form.hidden_field :commande_id, value: commande_id %>
