--- a/app/views/pdf_commande/_paiements.html.erb
+++ b/app/views/pdf_commande/_paiements.html.erb
@@ -1,4 +1,4 @@
-<% unless @messagemail.typedoc == "avoir" %> <%# cacher pour avoir%>
+<%# unless @messagemail.typedoc == "avoir" %> <%# cacher pour avoir%>
 
     <div class="section-solidaire">
 
