--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -10,11 +10,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-  <%= wicked_pdf_stylesheet_link_tag "document" %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <%= wicked_pdf_stylesheet_link_tag "document" %>
 
   </head>
+
   <body class="body-doc">
-    <div id="header">
+    <div id="header" style="text-align: center;">
+      <%= wicked_pdf_image_tag asset_url('/images/logo_courant_public.png'), style: 'display: inline-block;' %>
     </div>
     <%= yield %>
   </body>
