--- a/app/views/pdf_commande/_articles.html.erb
+++ b/app/views/pdf_commande/_articles.html.erb
@@ -1,12 +1,5 @@
 
-<%# reparametrer les articles avec le param local commande passé depuis commande mailer %>
-<% @articles = Article.commande_courante(@commande) %>
-
-  <h4 class="h4-doc">
-    <% typedoc = @messagemail.typedoc %>
-  </h4>
-
-<% unless typedoc == "facture_simple" || typedoc == "avoir" %>
+<%# unless typedoc == "facture_simple" || typedoc == "avoir" %>
 
   <h5 class="h5-doc"> ARTICLES </h5>
 
@@ -22,23 +15,22 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <% @articles.each_with_index do | article, i | %>
-            <% @produit = Produit.find(article.produit_id) if Produit.find(article.produit_id).present? %>
+        <% @commande.articles.each_with_index do | article, i | %>
+          <tr>
             <td class="td-doc centered" style="width: 40px;"> <%= i + 1 %> </td>
             <td class="td-doc centered" style="width: 70px;"> 
-              <%= image_tag(@produit.default_image, style: "width: 80px; display: block", 
+              <%= image_tag(article.produit.default_image, style: "width: 80px; display: block", 
                class: "img-fluid rounded") %> 
             </td>
 
             <td> 
               <div class="td-doc-main"> 
-                <%= @produit.nom %> 
+                <%= article.produit.nom %> 
               </div>
               <span class="td-doc-normal"> 
-                <%= @produit.description %> 
-                taille: <%= @produit.taille %>  
-                <%= article.commentaire %>
+                <%= article.produit.description %> 
+                taille: <%#= article.produit.taille %>  
+                <%= article.commentaires %>
                 <%= "location longue durée" if article.longueduree == true %>  
               </span>
             </td>
@@ -47,31 +39,33 @@
             <td class="td-doc-valeurs ended"> <%= number_to_currency(article.prix, locale: :fr) %> </td>
             <td class="td-doc-valeurs ended"> <%= number_to_currency(article.total, locale: :fr) %> </td>
             <td class="td-doc-valeurs ended"> <%= number_to_currency(article.totalcaution, locale: :fr) %> </td>
-          </tr> 
 
-            <% @sousarticles = Sousarticle.where(article_id: article.id) %>
-            <% @sousarticles.each do |sousarticle| %>
-            <% @produit = Produit.find(sousarticle.produit_id) if Produit.find(sousarticle.produit_id).present?  %>
-              <tr>
+          </tr> 
+        <% end %>
+
+            <%# @sousarticles = Sousarticle.where(article_id: article.id) %>
+            <%# @sousarticles.each do |sousarticle| %>
+            <%# @produit = Produit.find(sousarticle.produit_id) if Produit.find(sousarticle.produit_id).present?  %>
+              <!--tr>
                 <td></td>
                 <td class="td-doc-img-sousarticle"> 
-                  <%= image_tag(@produit.default_image, style: "width: 40px; display: block", 
+                  <%#= image_tag(@produit.default_image, style: "width: 40px; display: block", 
                     class:"") %>
                 </td>
                 <td class="td-doc-italic fst-italic"> 
-                  <%= @produit.nom %> 
-                  taille: <%= @produit.taille %>  
-                  <%= @produit.description %> 
-                  <%= sousarticle.commentaire %> 
+                  <%#= @produit.nom %> 
+                  taille: <%#= @produit.taille %>  
+                  <%#= @produit.description %> 
+                  <%#= sousarticle.commentaire %> 
                 </td>
                 <td></td>
                 <td> </td>
                 <td class="td-doc ended">  
-                  <%= number_to_currency(sousarticle.prix_sousarticle, locale: :fr) if sousarticle.prix_sousarticle > 0 %> 
+                  <%#= number_to_currency(sousarticle.prix_sousarticle, locale: :fr) if sousarticle.prix_sousarticle > 0 %> 
                 </td>
-              </tr>
-            <% end %>       
-        <% end %>
+              </tr-->
+            <%# end %>       
+      
       </tbody>
 
       <tfoot>
@@ -80,51 +74,51 @@
             TOTAUX
           </td>
           <td class="centered tfoot-doc">
-            <%= Article.commande_courante(@commande).compte_articles %>
+            <%#= Article.commande_courante(@commande).compte_articles %>
           </td>
           <td class="tfoot-doc"></td>
           <td class="ended tfoot-doc">
-            <%= number_to_currency(Article.commande_courante(@commande).sum_articles + 
+            <%#= number_to_currency(Article.commande_courante(@commande).sum_articles + 
                 Article.joins(:sousarticles).commande_courante(@commande).sum_sousarticles, locale: :fr) %>
           </td>
 
           <td class="ended tfoot-doc">
-            <%= number_to_currency(Article.commande_courante(@commande).sum_caution_articles, locale: :fr) %>
+            <%#= number_to_currency(Article.commande_courante(@commande).sum_caution_articles, locale: :fr) %>
           </td>
 
         </tr>
       </tfoot>
     </table>
 
-<% end %> 
+<%# end %> 
 
-<% if typedoc == "facture_simple" %>
-  <div class="cadre">
-      <% totalHt = (Article.commande_courante(@commande).sum_articles + 
+<%# if typedoc == "facture_simple" %>
+  <!--div class="cadre">
+      <%# totalHt = (Article.commande_courante(@commande).sum_articles + 
                 Article.joins(:sousarticles).commande_courante(@commande).sum_sousarticles) / 1.2 %>
-      <% totalTva = totalHt * 0.2 %>
+      <%# totalTva = totalHt * 0.2 %>
 
-     <% totalTtc = Article.commande_courante(@commande).sum_articles + 
+     <%# totalTtc = Article.commande_courante(@commande).sum_articles + 
                 Article.joins(:sousarticles).commande_courante(@commande).sum_sousarticles %>
 
-      <span> <%= @messagemail.commentairefasimple %>  </span> <br> <br>
+      <span> <%#= @messagemail.commentairefasimple %>  </span> <br> <br>
 
       <span>Total HT </span> 
       <span class=""> 
-        <%= number_to_currency(totalHt, locale: :fr) %>
+        <%#= number_to_currency(totalHt, locale: :fr) %>
       </span> <br>
 
       <span>TVA </span> 
       <span class=""> 
-        <%= number_to_currency(totalTva, locale: :fr) %>
+        <%#= number_to_currency(totalTva, locale: :fr) %>
       </span> <br>
      
       <span>Total TTC </span> 
       <span class="doc-important"> 
-         <%= number_to_currency(totalTtc, locale: :fr) %>
+         <%#= number_to_currency(totalTtc, locale: :fr) %>
       </span> <br>
 
       <br>
-  </div>
+  </div-->
 
-<% end %>
+<%# end %>
