--- a/app/views/pdf_commande/document.html.erb
+++ b/app/views/pdf_commande/document.html.erb
@@ -4,28 +4,19 @@
   <title>Document</title>
 </head>
 
-
-<div class="header-doc">
-  test document commande <%= @commande.id %>
-
-   <%= @type_doc %>
-
-</div>
-
-
 <h4 class="h4-doc"> 
-test doc commande
-  <%#= @messagemail.typedoc %> 
-  <%# @commande = Commande.find(@messagemail.commande_id) %>
-  <%#= @commande.texte_record %>
+  <%= "Devis" if @commande.devis? %>
+  
+  <strong> 
+    <%= @commande.ref_commande %> 
+    <%= @type_doc %> 
+  </strong>
 
-  <%#= " | devis" if Commande.find(@messagemail.commande_id).devis? %>
 </h4>
 
-<%#= render "pdf/docInfosCommande" %>
-<%#= render "pdf/docBlocAdresse" %>
-<%#= render "pdf/docListeArticles" %> 
-<%#= render "pdf/docListePaiements" %> 
+<%= render "pdf_commande/infos" %>
+<%= render "pdf_commande/articles" %> 
+<%#= render "pdf_commande/paiements" %> 
 <%#= render "pdf/docListeAvoirrembs" %> 
 <%#= render "pdf/docListeSynthese" %> 
 
