base synthese financiere commande

--- a/app/views/clients/_client_mini.html.erb
+++ b/app/views/clients/_client_mini.html.erb
@@ -8,8 +8,8 @@
     <div class="col-10">
         <strong> <%= client.full_name %> </strong> 
 
-        <%= custom_badge("fa-phone", client.tel) %>
-        <%= custom_badge("fa-at", client.mail) %>
+        <%= custom_badge("fa-phone", "", "secondary", client.tel) %>
+        <%= custom_badge("fa-at", "", "secondary", client.mail) %>
         
     </div>
     
