--- a/app/views/commandes/show.html.erb
+++ b/app/views/commandes/show.html.erb
@@ -11,7 +11,7 @@
 
 <%= render 'avoir_rembs/avoir_rembs' %>
 
-<div class="rounded bg-secondary mt-3 m-2 p-2">
+<div class="d-flex rounded bg-secondary mt-3 m-2 p-2">
 
     <div class="dropdown">
         <a class="btn btn-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -30,6 +30,7 @@
         </ul>
     </div>
 
+    <%= render 'synthese' %>
 </div>
 
 <hr>
