ajustement des helpers badges - turbo stream sur avoirremb et update de synthese commande en footer - correction header footer doc

--- a/app/views/avoir_rembs/_avoir_rembs.html.erb
+++ b/app/views/avoir_rembs/_avoir_rembs.html.erb
@@ -18,3 +18,7 @@
     <%= render partial: 'avoir_rembs/avoir_remb', locals: { avoir_remb: avoir_remb } %>
   <% end %>
 </div>
+
+<div class="card mx-2 rounded bg-secondary mb-3">
+  <%= render 'avoir_rembs/synthese' %>
+</div>
