--- a/app/views/paiement_recus/_paiement_recus.html.erb
+++ b/app/views/paiement_recus/_paiement_recus.html.erb
@@ -18,4 +18,6 @@
   <% end %>
 </div>
 
-<%= render 'paiement_recus/synthese' %>
+<div class="card mx-2 rounded bg-secondary mb-3">
+  <%= render 'paiement_recus/synthese' %>
+</div>
