--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -19,4 +19,6 @@
   <% end %>
 </div>
 
-<%= render 'articles/synthese' %>
+<div class="card mx-2 rounded bg-secondary mb-3">
+  <%= render 'articles/synthese' %>
+</div>
