--- a/app/views/avoir_rembs/_form.html.erb
+++ b/app/views/avoir_rembs/_form.html.erb
@@ -13,8 +13,16 @@
       </div>
     <% end %>
 
+    <div class="mx-1 px-2">
+      <div class="input-group input-group">
+        <%= form.label :type_avoir_remb, class: "input-group-text" %>
+        <%= form.select :type_avoir_remb, AvoirRemb::TYPE_AVOIRREMB,
+        { include_blank: 'Select' }, class: "form-select" %>
+      </div>
+    </div>
+
     <%= custom_form_elements(form, 
-      [:type_avoir_remb, :text_field], [:montant, :number_field],
+      [:montant, :number_field],
       [:nature, :text_field] )
     %>
 
