--- a/app/assets/stylesheets/document.css
+++ b/app/assets/stylesheets/document.css
@@ -3,27 +3,22 @@
   color: rgb(143, 31, 70);
 }
 
-.cadre {
-  padding: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(249, 237, 237);
-  color: rgb(0, 0, 0);
+:root {
+  --light-grey-color: rgb(101, 101, 101);
 }
 
-.bloc-adresse {
+.cadre {
+  border-radius: 10px;
+  padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
-  background-color: rgb(249, 237, 237);
+  background-color: rgb(205, 205, 205);
   color: rgb(0, 0, 0);
-  position: absolute; 
-  top: 120px;
-  left: 650px;
 }
 
 .bloc-mention{
   font-family: Arial, Helvetica, sans-serif;
   font-size: small;
-  background-color: rgb(249, 237, 237);
+  background-color: rgb(228, 227, 227);
   color: rgb(0, 0, 0);
   text-align: center;
   font-style: italic;
@@ -63,7 +58,8 @@
 
 .table-doc{
   width: 100%;
-  background-color: rgb(249, 237, 237);
+  border-radius: 10px;
+  background-color: rgb(237, 237, 237);
   border-color: white;
 }
 
@@ -75,7 +71,7 @@
 
 .th-doc, .tfoot-doc{
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(142, 141, 141);
+  background-color: rgb(205, 205, 205);
   color: white;
   text-align: center;
   font-size: large;
