--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -7,7 +7,9 @@
     
     <div class="dropdown">
         <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Editer PDF
+
+            <i class="fa fa-file me-1"></i>
+            <span class="fw-bold"> Editer </span> 
         </a>
 
         <ul class="dropdown-menu">
