--- a/app/views/pdf_commande/_avoirrembs.html.erb
+++ b/app/views/pdf_commande/_avoirrembs.html.erb
@@ -1,8 +1,6 @@
-<%# reparametrer les articles avec le param local commande passé depuis commande mailer %>
-<% @avoirrembs = Avoirremb.commande_courante(@commande) %>
 
 <div class="section-solidaire"> 
-  <% if @avoirrembs.present? %>
+  <% if @commande.avoir_rembs.present? %>
     <h5 class="h5-doc"> AVOIRS REMBOURSEMENTS </h5>
 
     <table class="table table-doc table-bordered">
@@ -16,12 +14,12 @@
           </thead>
           <tbody>
 
-            <% @avoirrembs.each_with_index do | avoirremb, i | %>
+            <%  @commande.avoir_rembs.each_with_index do | avoirremb, i | %>
               <tr>
                 <td class="td-doc centered"> <%= i + 1 %> </td>
-                <td class="td-doc centered"> <%= avoirremb.typeavoirremb %> </td>
+                <td class="td-doc centered"> <%= avoirremb.type_avoir_remb %> </td>
                 <td class="td-doc centered"> <%= avoirremb.created_at.strftime("%d/%m/%y")  %> </td>
-                <td class="td-doc centered"> <%= number_to_currency(avoirremb.montant, locale: :fr) %> </td>
+                <td class="td-doc centered"> <%= custom_currency_format(avoirremb.montant) %> </td>
               </tr> 
             <% end %>
           </tbody>
@@ -30,7 +28,7 @@
             <tr>
               <td colspan=3 class="tfoot-doc">  TOTAUX  </td>
               <td class="tfoot-doc centered"> 
-                <%= number_to_currency(Avoirremb.commande_courante(@commande).sum_avoirrembs, locale: :fr) %> 
+                <%= custom_currency_format(recu_caution(@commande)) %> 
               </td>
             </tr>
           </tfoot>
