--- a/app/views/pdf_commande/document.html.erb
+++ b/app/views/pdf_commande/document.html.erb
@@ -4,6 +4,7 @@
   <title>Document</title>
 </head>
 
+<br> 
 <h4 class="h4-doc"> 
   <%= "Devis" if @commande.devis? %>
   
@@ -14,9 +15,9 @@
 
 </h4>
 
-<%= render "pdf_commande/infos" %>
+<%= render "pdf_commande/infos" %> <br>
 <%= render "pdf_commande/articles" %> 
-<%#= render "pdf_commande/paiements" %> 
-<%#= render "pdf/docListeAvoirrembs" %> 
-<%#= render "pdf/docListeSynthese" %> 
+<%= render "pdf_commande/paiements" %> 
+<%= render "pdf_commande/avoirrembs" %> 
+<%= render "pdf_commande/synthese" %> 
 
