--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -16,7 +16,12 @@
         <%= options_supplementaires_link(fournisseurs_path, "fa-industry", "Fournisseurs", "btn-outline-dark") %>
         <%= options_supplementaires_link(root_path, "fa-cubes", "Gestion des Ensembles", "btn-outline-primary") %>
         <%= options_supplementaires_link(categorie_produits_path, "fa-cubes", "Cat. produits", "btn-outline-dark") %>
-    
+
+        <%= options_supplementaires_link(couleurs_path, "fa-cubes", "Couleurs", "btn-outline-dark") %>
+        <%= options_supplementaires_link(tailles_path, "fa-cubes", "Tailles", "btn-outline-dark") %>
+
+        <%# faire des regrouepents avc des menus deroulants par cat : ex parametre %>
+
     </div>
 
 </div>
