base stock tous les produits

--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -12,7 +12,7 @@
         <%= options_supplementaires_link(root_path, "fa-bullhorn", "Marketing", "btn-outline-warning") %>
         <%= options_supplementaires_link(root_path, "fa-chart-line", "Analyses", "btn-outline-success") %>
         <%= options_supplementaires_link("etiquettes", "fa-tags", "Etiquettes", "btn-outline-secondary") %>
-        <%= options_supplementaires_link(root_path, "fa-box-open", "Stocks", "btn-outline-danger") %>
+        <%= options_supplementaires_link(stock_index_path, "fa-box-open", "Stocks", "btn-outline-danger") %>
         <%= options_supplementaires_link(fournisseurs_path, "fa-industry", "Fournisseurs", "btn-outline-dark") %>
         <%= options_supplementaires_link(root_path, "fa-cubes", "Gestion des Ensembles", "btn-outline-primary") %>
         <%= options_supplementaires_link(categorie_produits_path, "fa-cubes", "Cat. produits", "btn-outline-dark") %>
