--- a/app/views/pdf_commande/_synthese.html.erb
+++ b/app/views/pdf_commande/_synthese.html.erb
@@ -84,7 +84,7 @@
     <%# if @messagemail.commentairedoc? %>
         <div class="cadre my-2">
         <span class="bolded">Commentaires </span> 
-        <span class=""> <%#= @messagemail.commentairedoc %> </span> <br>
+        <span class=""> <%= @commentaire_doc %> </span> <br>
         <br>
         </div>
     <%# end %>
