--- a/app/views/doc_editions/_doc_edition.html.erb
+++ b/app/views/doc_editions/_doc_edition.html.erb
@@ -10,13 +10,17 @@
   </p>
 
   <p>
-    <strong>Edition type:</strong>
-    <%= doc_edition.edition_type %>
-  </p>
-
-  <p>
     <strong>Commentaires:</strong>
     <%= doc_edition.commentaires %>
   </p>
+
+  <%= link_to generate_commande_doc_editions_path(commande: doc_edition.commande, type_doc: doc_edition.doc_type), 
+         class: "btn btn-outline-danger m-1 w-100", target: "_blank" do %>
+         <span class="fw-bold"> Editer pdf </span>
+   <% end %>
+
+
+  <%= button_to 'Send Email', send_email_path(commande: doc_edition.commande, type_doc: doc_edition.doc_type), method: :post, class: 'btn w-100 btn-outline-primary' %>
+
 
 </div>
